--- a/VeroExpressLibrary/projects/veroexpress/src/lib/Ui/toast/toast.component.html
+++ b/VeroExpressLibrary/projects/veroexpress/src/lib/Ui/toast/toast.component.html
@@ -1,3 +1,22 @@
-<p>
-  toast works!
-</p>
+
+
+<!-- 
+
+
+<div id="toast-container" class="toast-top-right" style="pointer-events: auto;">
+  
+  <div class="toast toast-info"  toast="" style="">
+  <div ng-switch="" on="allowHtml">
+ 
+    
+    <div ng-switch-default="" ng-if="title" class="toast-title" aria-label="Some title here" style="">Some title here</div>
+  
+
+    
+    <div ng-switch-default="" class="toast-message" aria-label="Type your message here" style="">Type your message here</div>
+  
+
+  </div>
+
+</div></div> -->
+
